fixed some major mobile bugs.. still working
tooltip causing the screen to be too wide.

Some article margins (I have not touched the other paragraph types but
they should be in articles…)

put authors in alphabetical order by last name

--- a/source/stylesheets/features/us-healthcare.css.scss
+++ b/source/stylesheets/features/us-healthcare.css.scss
@@ -51,6 +51,10 @@ $light-blue-selected: darken(rgba(142, 175, 208,1),10%);
   text-align: center;
   background: url("/images/features/us-healthcare/jumbotron3.jpg");
   background-size: cover;
+  
+  @media only screen and (max-width: 768px){
+    margin-bottom: 10px; 
+  }
 }
 
 .container .jumbotron{
@@ -63,7 +67,7 @@ $light-blue-selected: darken(rgba(142, 175, 208,1),10%);
   height: 80vh;
   top: 0;
   left: 0;
-  padding-top: 30vh;
+  padding-top: 40vh;
   position: absolute;
 }
 
@@ -76,6 +80,10 @@ h1 {
   font-weight: 900;
   font-size: 3em;
   letter-spacing: 0.03em;
+  
+  @media only screen and (max-width: 768px){
+    font-size: 2em; 
+  }
 }
 
 p {
@@ -90,6 +98,12 @@ article, footer {
   width: 70%;
   margin: 0 auto;
   padding: 60px 0px 60px;
+  
+  @media only screen and (max-width: 768px){
+    padding: 20px 0px 20px;
+    width: 85%;
+  }
+  
 }
 
 article h2, article h1 {
